# brain-wrought-engine

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
brain_wrought_engine/: __init__.py  text_utils.py
brain_wrought_engine/assistant/: __init__.py
brain_wrought_engine/fixtures/: __init__.py  __main__.py  degradations.py  dirty_stats.py  entity_pool.py  generate_dirty.py  generator.py  gold_graph.py  inbox_generator.py  validator.py
brain_wrought_engine/ingestion/: __init__.py  backlink_f1.py  citation_accuracy.py  entity_recall.py  schema_completeness.py  setup_friction.py
brain_wrought_engine/leaderboard/: __init__.py
brain_wrought_engine/retrieval/: __init__.py  models.py  qrel_generator.py  scorer.py  verifier.py
docs/: DECISIONS.md  SUBMISSION_PROTOCOL.md
docs/spawn_prompts/: BW-002c-qrel-fix.md  BW-007-synthetic-inbox-generator.md  BW-008-gold-entity-graph.md  BW-009-entity-recall-scorer.md  BW-010-backlink-f1-scorer.md  BW-011-citation-accuracy-scorer.md  BW-012-schema-completeness-scorer.md  BW-013-setup-friction-scorer.md  BW-014-dirty-schema-fixtures.md  BW-INTEG-2-inbox-to-gold-graph.md
tests/fixtures/: test_generate_dirty.py  test_generator.py  test_gold_graph.py  test_inbox_generator.py  test_validator.py
tests/ingestion/: test_backlink_f1.py  test_citation_accuracy.py  test_entity_recall.py  test_schema_completeness.py  test_setup_friction.py
tests/retrieval/: test_models_v1.py  test_qrel_generator.py  test_qrel_generator_v2.py  test_qrel_generator_v3.py  test_scorer.py  test_scorer_edge.py
