[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "brain-wrought-engine"
version = "0.1.0"
description = "Deterministic scoring engine for the Brain-Wrought personal-brain benchmark"
authors = ["Arron Street"]
license = "MIT"
readme = "README.md"
packages = [{include = "brain_wrought_engine"}]

[tool.poetry.dependencies]
python = "3.12.3"
pydantic = "2.10.4"
litellm = "1.56.4"
numpy = "2.2.1"
pyyaml = "6.0.3"
scipy = "1.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-randomly = "3.15.0"
pytest-cov = "6.0.0"
mypy = "1.13.0"
ruff = "0.8.6"
hypothesis = "6.122.3"
types-pyyaml = "6.0.12.20260408"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=brain_wrought_engine --cov-report=term-missing"
